--- a/src/scss/quadrone/components/buttons.scss
+++ b/src/scss/quadrone/components/buttons.scss
@@ -122,9 +122,7 @@
     box-shadow: none;
 
     &:hover {
-      background: transparent;
-      border-style: dashed;
-      text-shadow: 0px 0px 8px var(--t5e-color-gold);
+      background: var(--t5e-component-field-background-hover);
     }
   }
 
@@ -257,7 +255,7 @@
 .button-group {
   box-sizing: border-box;
   box-shadow: var(--t5e-drop-shadow-field);
-  border: 1px solid var(--t5e-component-field-border);
+  border: 0.0625rem solid var(--t5e-component-field-border);
   border-radius: 0.125rem;
   display: flex;
   flex-direction: row;
@@ -271,12 +269,12 @@
   :is(button, .button) {
     --button-padding-inline-start: 0.625rem;
     --button-padding-inline-end: 0.625rem;
-    border-width: 0 1px 0 0;
+    border-width: 0 0.0625rem 0 0;
     box-shadow: none;
     min-height: calc(var(--t5e-field-size-default) - 0.125rem);
 
     &:hover {
-      border-width: 0 1px 0 0;
+      border-width: 0 0.0625rem 0 0;
     }
   }
 
